--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -15,4 +15,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center" />
 
+    <TextView
+        android:id="@+id/endOfListTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Scroll again to the next page"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:visibility="gone"
+        android:padding="8dp" />
+
 </LinearLayout>
