--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,5 +1,9 @@
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_list" android:title="List" android:icon="@drawable/ic_list" />
-    <item android:id="@+id/menu_profile" android:title="Profile" android:icon="@drawable/ic_profile" />
+    <item android:id="@+id/listFragment"
+        android:title="List"
+        android:icon="@drawable/ic_list" />
+
+    <item android:id="@+id/profileFragment"
+        android:title="Profile"
+        android:icon="@drawable/ic_profile" />
 </menu>
